#347/feature/edit user endpoint completed
