# visual-compiler/backend/docs/swagger.json
@@ -1439,9 +1439,116 @@
                     }
                 }
             }
+        },
+        "/users/update": {
+            "patch": {
+                "description": "Update user details. Either updating username, email or both",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Update User",
+                "parameters": [
+                    {
+                        "description": "Edit User",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.AdminRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User update successful",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input or ID format",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthorized access",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Username/Email taken",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "handlers.AdminRequest": {
+            "type": "object",
+            "required": [
+                "admin_id",
+                "users_id"
+            ],
+            "properties": {
+                "admin_id": {
+                    "description": "Represents the Admin's ID from frontend",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "Optional: User's new email address",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "Optional: User's new username",
+                    "type": "string"
+                },
+                "users_id": {
+                    "description": "Represents the User's ID from frontend",
+                    "type": "string"
+                }
+            }
+        },
         "handlers.AnalyseUserInputs": {
             "type": "object",
             "required": [
